package presentation.core.notification;

public interface NotificationManager
{
  void notify(String message, NotificationType type);
}
