package presentation.core.notification;

public enum NotificationType
{
  SUCCESS,
  INFO,
  WARNING,
  ERROR
}
